<resources>
    <string name="app_name">IVent</string>

    <string name="title_activity_add_friends">Add Friends</string>
    <string name="title_activity_event_description">Event Description</string>
    <string name="title_activity_post">Post</string>
    <string name="title_activity_create_post">Create Post</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_category">Event List</string>
    <string name="title_activity_new_event">New Event</string>
    <string name="title_activity_login">iVent</string>
    <string name="title_activity_category_list">Category List</string>

    <string name="edit_post">Enter a post here</string>
    <string name="action_settings">Settings</string>
    <string name="Description">Description</string>
    <string name="Add_new_event">Add new event</string>
    <string name="event_name">Event Name</string>
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="date">date</string>
    <string name="location">Location</string>
    <string name="details">Details</string>
    <string name="category">Category</string>
    <string name="edit_category">Create New Category</string>
    <string name="input_category_name">New Category Name</string>
    <string name="cancel">Cancel</string>
    <string name='create'>Create</string>


    <string name="button_create_post">Create A New Post</string>
    <string name="button_chat">Chat</string>
    <string name="button_post">Post</string>
    <string name="button_done">Done</string>
    <string name="button_add_image">Add Image</string>
    <string name="button_add_cover_photo">Add Cover Photo</string>
    <string name="button_camera">Camera</string>

    <string name="network_status">Network Status</string>
    <string name="preference_file_key">ivent.PREFERENCE</string>
    <string name="user_name">User Name</string>
    <string name="user_photo_link">User Photo Link</string>

    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This name is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
</resources>
