<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/newevent_linear_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/event_name"
            android:paddingLeft="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/newevent_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/year" />

            <Spinner
                android:id="@+id/newevent_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/month" />

            <Spinner
                android:id="@+id/newevent_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/date" />

            <Spinner
                android:id="@+id/newevent_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/date" />

        </LinearLayout>

        <EditText
            android:id="@+id/edit_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/location"
            android:paddingLeft="20dp" />

        <EditText
            android:id="@+id/edit_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/details"
            android:paddingLeft="20dp" />

        <Spinner
            android:id="@+id/newevent_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/upload"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:background="#3e9cb9"
            android:elegantTextHeight="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/button_add_image" />


        <ImageView
            android:id="@+id/imageViewUpload"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/newevent_linear_1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/newevent_linear_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/newevent_add_friends_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0.5dip"
            android:layout_weight="1"
            android:background="#3e9cb9"
            android:text="@string/title_activity_add_friends" />

        <Button
            android:id="@+id/newevent_done_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0.5dip"
            android:layout_weight="1"
            android:background="#3e9cb9"
            android:text="@string/button_done" />

    </LinearLayout>


</RelativeLayout>


