<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ivent.ui.EventDescriptionActivity">

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/chat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0.5dip"
            android:layout_weight="1"
            android:background="#3e9cb9"
            android:text="@string/button_chat" />

        <Button
            android:id="@+id/post_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0.5dip"
            android:layout_weight="1"
            android:background="#3e9cb9"
            android:text="@string/button_post" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="fill_parent"
        android:layout_height="250dip"
        android:layout_above="@+id/button_layout"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:src="@drawable/loading" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_view"
            android:fillViewport="true"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/detail_list_view"
                    android:layout_width="fill_parent"
                    android:layout_height="150dip"
                    android:layout_below="@+id/image_view"
                    android:clickable="false"
                    android:divider="#00FFFFFF" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/detail_list_view"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/friend_image_view"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="5px"
                        android:src="@drawable/shan" />

                    <ImageView
                        android:id="@+id/friend_list_view1"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="5px"
                        android:src="@drawable/zhengyang" />

                </LinearLayout>

                <TextView
                    android:id="@+id/detail_text_view"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/Description" />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</RelativeLayout>
